--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
   "template": {
     "inheritFrom": [
       "arlac77/template-arlac77-github",
+      "arlac77/template-documentation",
       "arlac77/template-esm-only",
-      "arlac77/template-node-component"
+      "arlac77/template-node-component",
+      "arlac77/template-coverage"
     ]
   }
 }
